# ray-tracer

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: Finddoctest.cmake
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
lib/: CMakeLists.txt  functions.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testmain.cpp
